# powerbi-expert-app

./: .gitignore  LICENSE  PowerBI_Expert.bat  README.md  SETUP.md  pyproject.toml  requirements.txt  web_ui.py
src/: __init__.py  __main__.py  server.py
src/connectors/: __init__.py  desktop.py  pbip.py  tom.py  xmla.py
src/llm/: __init__.py  azure_claude_provider.py  azure_provider.py  base_provider.py  data_boundary.py  ollama_provider.py  router.py
src/security/: __init__.py  audit_logger.py  network_validator.py
src/web/: __init__.py  app.py
src/web/routes/: __init__.py  chat.py  cloud.py  desktop.py  llm.py  pbip.py  status.py
src/web/services/: __init__.py  dax_utils.py  pbip_service.py  state.py
src/web/templates/: index.html
