[project]
name = "powerbi-mcp-v3"
version = "3.0.0"
description = "Enterprise-grade Power BI MCP Server with air-gapped deployment support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Sulaiman Ahmed" }
]
keywords = ["power-bi", "mcp", "ai", "enterprise", "air-gapped"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # MCP Protocol
    "mcp>=1.0.0",

    # LLM Providers
    "httpx>=0.25.0",           # Async HTTP for Ollama
    "openai>=1.0.0",           # OpenAI-compatible API (for Azure)

    # Power BI Connectivity (Windows)
    "pythonnet>=3.0.0",        # .NET interop
    "pyadomd>=0.1.0",          # ADOMD.NET wrapper
    "psutil>=5.9.0",           # Process discovery

    # Security & Auth
    "msal>=1.24.0",            # Azure AD auth
    "cryptography>=41.0.0",    # Log signing, encryption

    # Configuration
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",         # Config validation
    "pydantic-settings>=2.0.0",

    # Logging & Monitoring
    "structlog>=23.0.0",       # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
powerbi-mcp = "src.server:main"
validate-airgap = "src.security.network_validator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
